usr/src/cmd/sort/common/initialize.c
@@ -24,8 +24,6 @@
  * Use is subject to license terms.
  */
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #include "initialize.h"
 
 #ifndef TEXT_DOMAIN
@@ -109,6 +107,18 @@ initialize_pre(sort_t *S)
 	set_signal_jmp();
 }
 
+static int
+strcoll_cmp(void *s1, void *s2, flag_t f __unused)
+{
+	return (strcoll(s1, s2));
+}
+
+static int
+wcscoll_cmp(void *s1, void *s2, flag_t f __unused)
+{
+	return (wcscoll(s1, s2));
+}
+
 void
 initialize_post(sort_t *S)
 {
@@ -124,7 +134,7 @@ initialize_post(sort_t *S)
 	field_initialize(S);
 
 	if (S->m_single_byte_locale) {
-		S->m_compare_fn = (cmp_fcn_t)strcoll;
+		S->m_compare_fn = strcoll_cmp;
 		S->m_coll_convert = field_convert;
 		F = S->m_fields_head;
 
@@ -153,7 +163,7 @@ initialize_post(sort_t *S)
 			F = F->f_next;
 		}
 	} else {
-		S->m_compare_fn = (cmp_fcn_t)wcscoll;
+		S->m_compare_fn = wcscoll_cmp;
 		S->m_coll_convert = field_convert_wide;
 
 		F = S->m_fields_head;
